Chapter 02/sample_3_tier.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    tier: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    tier: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    tier: database
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  namespace: frontend
  labels:
    app: frontend
    tier: frontend
spec:
  containers:
  - name: frontend
    image: httpd:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
    tier: frontend
  name: frontend-test
  namespace: frontend
spec:
  containers:
  - image: alpine:latest
    name: frontend-test
    args:
    - /bin/sh
    - -c
    - while true; do sleep 5; done;
---
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  namespace: backend
  labels:
    app: backend
    tier: backend
spec:
  containers:
  - name: backend
    image: httpd:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  namespace: database
  labels:
    app: database
    tier: database
spec:
  containers:
  - name: database
    image: httpd:latest
    ports:
    - containerPort: 80
