Chapter 02/allow_ingress_backend.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: allow-frontend-to-backend 
  namespace: backend 
spec: 
  podSelector:
    matchLabels: 
       tier: backend 
  policyTypes: 
    - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: frontend 
    - podSelector:
        matchLabels:
          tier: frontend
    ports:
    - protocol: TCP
      port: 80
