Chapter 02/allow_ingress_db.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: allow-frontend-to-backend 
  namespace: database 
spec: 
  podSelector:
    matchLabels: 
       tier: database 
  policyTypes: 
    - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: backend 
    - podSelector:
        matchLabels:
          tier: backend
    ports:
    - protocol: TCP
      port: 80
