Chapter 02/allow_ingress_frontend.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: allow-ingress-to-frontend 
  namespace: frontend 
spec: 
  podSelector:
    matchLabels: 
       tier: frontend 
  policyTypes: 
    - Ingress 
  ingress: 
  - from: 
    - ipBlock: 
        cidr: 0.0.0.0/0 
    ports: 
    - protocol: TCP 
      port: 80
